--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,21 @@
 
 <html>
 <head>
+	<!-- Google Analytics Content Experiment code -->
+	<script>function utmx_section(){}function utmx(){}(function(){var
+	k='82708692-0',d=document,l=d.location,c=d.cookie;
+	if(l.search.indexOf('utm_expid='+k)>0)return;
+	function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+	indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+	length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+	'<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+	'://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+	'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+	valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+	'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+	</script><script>utmx('url','A/B');</script>
+	<!-- End of Google Analytics Content Experiment code -->
+
 	<title>HCI Project Portfolio</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,22 +41,190 @@
 		</div>
 
 		<h4>Projects</h4>
-		{{#each projects}}
-			<div class="project" id="{{id}}">
-				<div class="thumbnail">
-					<a href="/project/{{id}}">
-						<img src="images/{{image}}" alt="Lorem Pixel image" class="img-responsive">
-						<h4>{{title}}</h4>
-					</a>
-					<div class="likeCtr"><button class="btn btn-default likeBtn">Like</button></div>
-					<div class="details"></div>
+		{{#if grid}}
+  			
+<div class="row">
+<div class="project col-md-4" id="{{projects.0.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.0.id}}">
+			<img src="images/{{projects.0.image}}" alt="Lorem Pixel image">
+			<h4>{{projects.0.title}}</h4>
+		</a>
+		<div class="details"></div>
+	<button class="btn btn-default likeBtn">Like</button>
+	</div>
+</div>
+
+<div class="project col-md-4" id="{{projects.1.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.1.id}}">
+			<img src="images/{{projects.1.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.1.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+
+
+<div class="project col-md-4" id="{{projects.2.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.2.id}}">
+			<img src="images/{{projects.2.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.2.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+</div>
+
+<div class="row">
+<div class="project col-md-3" id="{{projects.3.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.3.id}}">
+			<img src="images/{{projects.3.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.3.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+
+
+<div class="project col-md-3" id="{{projects.4.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.4.id}}">
+			<img src="images/{{projects.4.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.4.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+
+
+<div class="project col-md-3" id="{{projects.5.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.5.id}}">
+			<img src="images/{{projects.5.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.5.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+
+<div class="project col-md-3" id="{{projects.6.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.6.id}}">
+			<img src="images/{{projects.6.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.6.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+</div>
+
+<div class="row">
+<div class="project col-md-2" id="{{projects.7.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.7.id}}">
+			<img src="images/{{projects.7.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.7.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+
+<div class="project col-md-2" id="{{projects.8.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.8.id}}">
+			<img src="images/{{projects.8.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.8.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+
+<div class="project col-md-2" id="{{projects.9.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.9.id}}">
+			<img src="images/{{projects.9.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.9.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+
+<div class="project col-md-2" id="{{projects.10.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.10.id}}">
+			<img src="images/{{projects.10.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.10.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+
+<div class="project col-md-2" id="{{projects.11.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.11.id}}">
+			<img src="images/{{projects.11.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.11.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+
+<div class="project col-md-2" id="{{projects.12.id}}">
+	<div class="thumbnail">
+		<a href="/project/{{projects.12.id}}">
+			<img src="images/{{projects.12.image}}" alt="Lorem Pixel image" class="img-responsive">
+			<h4>{{projects.12.title}}</h4>
+		</a>
+		<button class="btn btn-default likeBtn">Like</button>
+		<div class="details"></div>
+	</div>
+</div>
+</div>
+  		{{else}}
+			{{#each projects}}
+				<div class="project" id="{{id}}">
+					<div class="thumbnail">
+						<a href="/project/{{id}}">
+							<img src="images/{{image}}" alt="Lorem Pixel image" class="img-responsive">
+							<h4>{{title}}</h4>
+						</a>
+						<div class="likeCtr"><button class="btn btn-default likeBtn">Like</button></div>
+						<div class="details"></div>
+					</div>
 				</div>
-			</div>
-		{{/each}}
+			{{/each}}
+		{{/if}}
 
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/introHCI.js"></script>
+
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48448662-1','http://tdagsviklab8.herokuapp.com/');
+  ga('send', 'pageview');
+
+  </script>
+
+
 </body>
 </html>
